[refactor] 각 패키지 별 클래스 다이어 그램 추가